--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     },
     "allowSyntheticDefaultImports": true
   },
+  // "rules": {
+  //   // ...
+  //   "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+  //   "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+  // },
   "exclude": [
     "node_modules",
     "lib",
