--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "prettier --write"
     ],
     "*.{js,jsx}": [
+      "eslint --fix",
       "prettier --write"
     ],
     "*.{ts,tsx}": [
